--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
           <div class="col-md-3 col-sm-6">
             <!--|Text Box|-->
             <div class="text-box">
-              <span class="fp-icon"><i class="ion-planet"></i></span>
+              <span class="fp-icon"><i class="ion-ios-cog"></i></span>
               <div class="fp-desc">
                 <h4 class="title">Get to know the big firms in tunisia </h4>
                 <p >Attending the forum will give you a chance to get to know a lot more about the big known firms of the country and also give you the opportunity to discover new ones .</p>
@@ -815,7 +815,7 @@
   </section>
   <!--||End Benefits||-->
 
-  <!--||Packages||-->
+  <!--||Topic||-->
   <section id="packages" class="packages section">
     <div class="container">
       <!--|Section Header|-->
@@ -838,7 +838,7 @@
       </div>
     </div>
   </section>
-  <!--||End Packages||-->
+  <!--||End Topic||-->
 
   <!--||Register||-->
   <section id="register" class="register section overlay-black">
