--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="col-md-10 content-center">
               <!--|Head Text|-->
               <div class="head-text">
-                <p class="fp-meta">5 December, 2020 at Tunisia Polytechnic School</p>
+                <p class="fp-meta">11 November, 2020 at Ecole Polytechnique de Tunisie</p>
                 <h1 class="head-title">Forum EPT Entreprises <var>XX<sup>th</sup></var> edition</h1>
               </div>
               <!--|End Head Text|-->
@@ -157,7 +157,7 @@
             <span class="fp-icon"><i class="ion-map"></i></span>
             <div class="fp-desc">
               <h4 class="title">La Marsa</h4>
-              <p>Tunisia Polytechnic School</p>
+              <p>Ecole Polytechnique de Tunisie</p>
             </div>
           </div>
           <!--|End Overview Box|-->
@@ -192,7 +192,7 @@
           <div class="overview-box">
             <span class="fp-icon"><i class="ion-person-stalker"></i></span>
             <div class="fp-desc">
-              <h4 class="title">1420 Seats</h4>
+              <h4 class="title">500+ Seats</h4>
               <p>Hurry up! Book seat</p>
             </div>
           </div>
@@ -803,7 +803,7 @@
             <div class="text-box">
               <span class="fp-icon"><i class="ion-ios-cog"></i></span>
               <div class="fp-desc">
-                <h4 class="title">Get to know the big firms in tunisia </h4>
+                <h4 class="title">Get to know the big firms in Tunisia </h4>
                 <p >Attending the forum will give you a chance to get to know a lot more about the big known firms of the country and also give you the opportunity to discover new ones .</p>
               </div>
             </div>
@@ -852,8 +852,7 @@
                 <span class="fp-meta">Now</span>
                 <span class="title-text">Register</span>
               </h2>
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration</p>
+              <p>In order to garantie your safety, the safety of other participants and a well organized event, we ask our dear attendees to fill out the form below. We can’t wait to have you amongst us !</p>
             </div>
           </div>
         </header>
@@ -945,7 +944,7 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#faq-panel" href="#faqTwo">
-                    <i class="fa-ico ion-help" style="margin-right:15px"></i>What is the Tunisia Polytechnic School?
+                    <i class="fa-ico ion-help" style="margin-right:15px"></i>What is the Ecole Polytechnique de Tunisie?
                   </a>
                 </h4>
               </div>
@@ -953,7 +952,7 @@
                 <div class="panel-body">
                   <center><img src="assets/images/logo ept.jpg" style="max-width: 50%;" onmouseover="zoom(this,100)"
                       onmouseout="zoom(this,50)"></center>
-                  <p>Since its creation in 1994, the Tunisia Polytechnic School has had for simple vocation the
+                  <p>Since its creation in 1994, the Ecole Polytechnique de Tunisie has had for simple vocation the
                     gathering of the
                     elite resulting from the national competition for entry to the engineering schools to shape it into
                     a cenacle of scientific leaders in the field.</p>
@@ -970,15 +969,17 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#faq-panel" href="#faqThree">
-                    <i class="fa-icon ion-images"></i> What Images, Videos, Code Can I Use in my Items?
+                    <i class="fa-icon ion-android-call"></i> How to contact us ?
                   </a>
                 </h4>
               </div>
               <div id="faqThree" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <p>Enim at asperiores quod velit minima officia accusamus cumque eligendi consequuntur fuga? Maiores,
-                    quasi, voluptates, exercitationem fuga voluptatibus a repudiandae expedita omnis molestiae alias
-                    repellat perferendis dolores dolor.</p>
+                  <p>You can either visit : <br>
+                    our Facebook page : <a href="https://www.facebook.com/ForumEptEntreprises" target="_blank">Forum EPT-entreprises</a><br>
+                    Our Instagram account : <a href="https://www.instagram.comforum_ept_entreprises" target="_blank">forum_ept_entreprises</a> <br>
+                    Email us: <a>forumeptentreprises@ept.tn</a>
+                  </p>
                 </div>
               </div>
             </div>
@@ -987,18 +988,13 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#faq-panel" href="#faqFour">
-                    <i class="fa-icon ion-social-usd"></i> How does the Tuts+ Premium affiliate program work?
+                    <i class="fa-icon ion-person-stalker"></i>For what audience is this event destined?
                   </a>
                 </h4>
               </div>
               <div id="faqFour" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, placeat, architecto rem
-                    dolorem dignissimos repellat veritatis in et eos doloribus magnam aliquam ipsa alias assumenda
-                    officiis quasi sapiente suscipit veniam odio voluptatum.</p>
-                  <p>Enim at asperiores quod velit minima officia accusamus cumque eligendi consequuntur fuga? Maiores,
-                    quasi, voluptates, exercitationem fuga voluptatibus a repudiandae expedita omnis molestiae alias
-                    repellat perferendis dolores dolor.</p>
+                  <p>Our forum is destined for students, post  graduates, teachers, experts and specialists in all scientific fields.</p>
                 </div>
               </div>
             </div>
@@ -1007,16 +1003,13 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#faq-panel" href="#faqFive">
-                    <i class="fa-icon ion-alert"></i> Can I offer my items for free on a promotional basis?
+                    <i class="fa-icon ion-social-usd"></i>Is this a paying event ?
                   </a>
                 </h4>
               </div>
               <div id="faqFive" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae
-                    minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore
-                    necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex
-                    expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</p>
+                  <p>There are no participation fees. Our event is free and accessible to all those who wish to.</p>
                 </div>
               </div>
             </div>
@@ -1257,7 +1250,7 @@
               <span class="fp-meta">Le</span>
               <span class="title-text">Polytechnicien</span>
             </h2>
-            <p>LePolytechnicien is the press of the Tunisia Polytechnic School, which is committed to the truth, the
+            <p>LePolytechnicien is the press of the Ecole Polytechnique de Tunisie, which is committed to the truth, the
               facts, and the high standards for fair, accurate, ethical and equitable reporting. </p>
           </div>
         </div>
@@ -1490,15 +1483,13 @@
     <div class="container">
       <!--|Social Links|-->
       <div class="social-links">
-        <a href="#"><i class="ion-social-instagram"></i></a>
+        <a href="https://www.instagram.comforum_ept_entreprises" target="_blank"><i class="ion-social-instagram"></i></a>
         <a href="https://www.facebook.com/ForumEptEntreprises" target="_blank"><i class="ion-social-facebook"></i></a>
-        <a href="#"><i class="ion-social-linkedin"></i></a>
-        <a href="#"><i class="ion-social-pinterest"></i></a>
       </div>
       <!--|End Social Links|-->
 
       <!--|Copyright|-->
-      <p class="copyright">&copy; 2020 <a href="#">EPT</a> . All Rights Reserved.</p>
+      <p class="copyright">&copy; 2020 <a href="https://www.facebook.com/EcolePolytechniqueDeTunisie/" target="_blank">EPT</a> . All Rights Reserved.</p>
       <!--|End Copyright|-->
     </div>
   </footer>
