--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
               <!--|Brand( Logo )|-->
               <a class="navbar-brand" href="#home">
-                <img class="logo-white" alt="rhyme" src="assets/images/logo_white.png">
-                <img class="logo-black" alt="rhyme" src="assets/images/logo_black.png">
+                <img class="logo-white" alt="forumeptentreprise" src="assets/images/logo_white.png">
+                <img class="logo-black" alt="forumeptentreprise" src="assets/images/logo_black.png">
               </a>
               <!--|End Brand( Logo )|-->
             </div>
@@ -124,7 +124,7 @@
               <!--|Head Text|-->
               <div class="head-text">
                 <p class="fp-meta">11 November, 2020 at Ecole Polytechnique de Tunisie</p>
-                <h1 class="head-title">Forum EPT Entreprises <var>XX<sup>th</sup></var> edition</h1>
+                <h1 class="head-title">FORUM EPT ENTREPRISES <var>XX<sup>th</sup></var> EDITION</h1>
               </div>
               <!--|End Head Text|-->
 
@@ -143,7 +143,7 @@
     </div>
 
     <!--|Animated Mouse Icon|-->
-    <span class="dwon-icon ion-mouse"></span>
+    <!--<span class="dwon-icon ion-mouse"></span>-->
   </header>
   <!--||End Site Header||-->
 
