--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="col-md-3 col-sm-6">
           <!--|Overview Box|-->
           <div class="overview-box">
-            <span class="fp-icon"><i class="ion-leaf"></i></span>
+            <span class="fp-icon"><i class="ion-cash"></i></span>
             <div class="fp-desc">
               <h4 class="title">35+ Sponsor</h4>
               <p>Silver,Gold & Platinum</p>
@@ -192,7 +192,7 @@
           <div class="overview-box">
             <span class="fp-icon"><i class="ion-person-stalker"></i></span>
             <div class="fp-desc">
-              <h4 class="title">500+ Seats</h4>
+              <h4 class="title">1000+ Tickets</h4>
               <p>Hurry up! Book seat</p>
             </div>
           </div>
@@ -427,9 +427,10 @@
           <!--|Tab Navigation|-->
           <div class="tab-navigation">
             <ul class="tabs">
-              <li><a class="active" href="#" data-tab="day1">Morning</a></li>
-              <li><a href="#" data-tab="day2">Afternoon</a></li>
-              <!-- <li><a href="#" data-tab="day3">27 Jan, 2016</a></li>-->
+              <li><a class="active" href="#" data-tab="day1">Round Table</a></li>
+              <li><a href="#" data-tab="day2">Workshops</a></li>
+              <li><a href="#" data-tab="day3">Stands</a></li>
+              <li><a href="#" data-tab="day4">Competitions</a></li>
             </ul>
           </div>
           <!--|End Tab Navigation|-->
@@ -496,7 +497,7 @@
                   <span class="fp-meta"><span>02:00am</span><br>Hall#02</span>
                 </div>
                 <div class="schedule-info">
-                  <h4 class="title">WP Theme &amp; Child Theme Development</h4>
+                  <h4 class="title">Closing Remarks</h4>
                   <div class="speaker">
                     <figure class="avatar">
                       <img src="assets/images/avatar04.jpg" alt="">
@@ -509,14 +510,6 @@
                 </div>
               </li>
 
-              <li>
-                <div class="pull-right text-right">
-                  <span class="fp-meta"><span>00:30pm</span><br>Hall#03</span>
-                </div>
-                <div class="schedule-info">
-                  <h4 class="title">Lunch Break</h4>
-                </div>
-              </li>
             </ul>
 
             <ul id="day2" class="tab-content">
@@ -601,7 +594,7 @@
                 </div>
               </li>
             </ul>
-            <!--
+            
           <ul id="day3" class="tab-content">
             <li>
               <div class="pull-right text-right">
@@ -684,7 +677,7 @@
               </div>
             </li>
           </ul>
-          -->
+          
           </div>
           <!--|End schedules|-->
         </div>
@@ -1483,7 +1476,7 @@
     <div class="container">
       <!--|Social Links|-->
       <div class="social-links">
-        <a href="https://www.instagram.comforum_ept_entreprises" target="_blank"><i class="ion-social-instagram"></i></a>
+        <a href="https://www.instagram.com/forum_ept_entreprises" target="_blank"><i class="ion-social-instagram"></i></a>
         <a href="https://www.facebook.com/ForumEptEntreprises" target="_blank"><i class="ion-social-facebook"></i></a>
       </div>
       <!--|End Social Links|-->
